deploy/ied-qualification/base/service-standalone1.yaml
apiVersion: v1
kind: Service
metadata:
  name: goauthy-qual-s1-0917
  namespace: ternal-auth
  labels:
    app.kubernetes.io/name: goauthy
    app.kubernetes.io/part-of: goauthy-qual-s1-0917
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: goauthy
    app.kubernetes.io/part-of: goauthy-qual-s1-0917
  ports:
    - name: http
      port: 8080
      targetPort: http
